Conclusão da aula 02

--- a/home-broker/04-k8s-deploy/01-kafka/deployment.yaml
+++ b/home-broker/04-k8s-deploy/01-kafka/deployment.yaml
@@ -120,9 +120,9 @@ metadata:
 spec:
   selector:
     app: control-center
-  #type: NodePort
-  type: LoadBalancer
+  type: NodePort
+  #type: LoadBalancer
   ports:
   - port: 80
     targetPort: 9021
-    # nodePort: 30002
+    nodePort: 30002
